# rapier.rs

./: .gitignore  README.md  copy_docs.sh  diff_with_branch.sh  docusaurus.config.js  docusaurus.config.ts  generate_user_guides.sh  inject_code_in_user_guides.sh  package-lock.json  package.json  sidebar_docs.js  sidebar_docs.ts  tsconfig.json
.github/workflows/: ci.yml  release.yml
community/: acknowledgements.mdx  support.mdx
docs/: doc1.md  globals.md
docs-examples/: Cargo.toml  README.md
docs-examples/2d/rust/: Cargo.toml
docs-examples/2d/rust/examples/: rs_advanced_collision_detection2.rs  rs_basic_sim2.rs  rs_character_controller2.rs  rs_colliders2.rs  rs_nalgebra2.rs  rs_rigid_bodies2.rs  rs_scene_queries2.rs  rs_serialization.rs  rs_simulation_structures2.rs
docs-examples/3d/rust/: Cargo.toml
docs-examples/3d/rust/examples/: rs_basic_sim3.rs  rs_character_controller3.rs  rs_colliders3.rs  rs_determinism.rs  rs_joints3.rs  rs_rigid_bodies3.rs  rs_scene_queries3.rs
docs-examples/inject_file/: test.mdx
docs/classes/: collider.md  colliderdesc.md  jointdesc.md  rigidbody.md  vector.md
src/css/: custom.css
src/pages/: benchmarks.tsx  index.js  index.tsx
static/demos/: 1.worker.js
static/demos2d/: 0.index.js  0.worker.js  234.index.js  index.js.LICENSE.txt
static/demos3d/: 0.index.js  0.worker.js  87.index.js  index.js
static/javascript2d/: globals.html  index.html
website/: copy_docs.sh  docusaurus.config.js  generate_user_guides.sh  package.json  publish.sh  sidebar_community.js  sidebar_docs.js  sidebars.js  siteConfig.js
(+709 files in other folders)
